Fri May 12 18:10:03 BST 2006 (njh)
----------------------------------
  * docs/man/clamav-milter.8:	Be explicit about what is a LAN machine
  * libclamav/pst.c:		rfc2426_escape is now thread safe
  * libclamav/message.c:	RFC2231 messages from thunderbird now handled
  					better

Fri May  5 12:23:23 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Create fewer bounce message FPs

Wed May  3 10:35:40 BST 2006 (njh)
----------------------------------
  * libclamav/scanners.c:	Pass full CTX into the mbox code

Tue May  2 16:21:06 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Reduce bounce false positives

Mon May  1 22:22:28 CEST 2006 (tk)
----------------------------------
  * clamconf/clamconf.c: fix typo spotted by NJH

Mon May  1 20:30:10 CEST 2006 (tk)
----------------------------------
  * libclamav/pe.c: add W32.Polipos.A detection
		    Thanks to aCaB for virus analysis and detection improvements

Mon May  1 19:54:57 CEST 2006 (tk)
----------------------------------
  * freshclam/manager.c: fix possible buffer overflow
    Reported by Ulf Harnhammar <metaur*telia.com> and Peter <remllov_*gmx.de>
    See http://www.clamav.net/security/0.88.2.html for details.

Sun Apr 30 19:23:35 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Fix compilation error on CYGWIN (correctly this time)

Tue Apr 25 18:48:23 BST 2006 (njh)
----------------------------------
  * libclamav/pst.c:	Apply patch from TK to use le??_to_host and to include
				clamav-config.h first

Mon Apr 24 22:19:34 BST 2006 (njh)
----------------------------------
  * libclamav/pst.[ch]:	Added first PST support - code yet to be cleaned or
				audited

Mon Apr 24 18:22:22 CEST 2006 (tk)
----------------------------------
  * libclamav: add skeleton support for PST files (patch from NJH)

Sun Apr 23 13:58:31 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Ensure that the quarantine location reported in